--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ canvas {
 @media screen and (max-width: 765px) {
   body {
     text-align: center;
-    background-color: antiquewhite;
+    background-color: white;
   }
 
   .header1 {
